# SPDX-FileCopyrightText: 2020 Project CHIP Authors
#
# SPDX-License-Identifier: Apache-2.0

import("//build_overrides/build.gni")
import("//build_overrides/pigweed.gni")

# The location of the build configuration file.
buildconfig = "${build_root}/config/BUILDCONFIG.gn"

# CHIP uses angle bracket includes.
check_system_includes = true

script_executable = "python3"

default_args = {
  pw_unit_test_AUTOMATIC_RUNNER = "$dir_pigweed/targets/host/run_test"

  pw_build_PIP_CONSTRAINTS = [ "//scripts/setup/constraints.txt" ]
  pw_build_PIP_REQUIREMENTS = [ "//scripts/setup/requirements.build.txt" ]

  # GN target to use for the default Python build venv.
  pw_build_PYTHON_BUILD_VENV = "//:matter_build_venv"
}
