# Copyright (c) 2020 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/build.gni")
import("//build_overrides/pigweed.gni")

# The location of the build configuration file.
buildconfig = "${build_root}/config/BUILDCONFIG.gn"

# CHIP uses angle bracket includes.
check_system_includes = true

script_executable = "python3"

default_args = {
  pw_unit_test_AUTOMATIC_RUNNER = "$dir_pigweed/targets/host/run_test"
  pw_unit_test_CONFIG = "//config/pw_unit_test:define_overrides"

  pw_build_PIP_CONSTRAINTS = [ "//scripts/setup/constraints.txt" ]
  pw_build_PIP_REQUIREMENTS = [ "//scripts/setup/requirements.build.txt" ]

  # GN target to use for the default Python build venv.
  pw_build_PYTHON_BUILD_VENV = "//:matter_build_venv"

  # Required for pw_unit_test
  pw_sys_io_BACKEND = "$dir_pw_sys_io_stdio"
  pw_assert_BACKEND = "$dir_pw_assert_log"
  pw_log_BACKEND = "$dir_pw_log_basic"

  # TODO: Make sure only unit tests link against this
  pw_build_LINK_DEPS = [
    "$dir_pw_assert:impl",
    "$dir_pw_log:impl",
  ]
}
